--- a/.travis.yml
+++ b/.travis.yml
@@ -8,3 +8,15 @@ before_install:
 
 script:
  - docker run -e CI=true staspolivyanenko/docker-react npm run test
+
+deploy:
+ provider: elasticbeanstalk
+ region: "eu-central-1"
+ app: "docker-react"
+ env: "DockerReact-env"
+ bucket_name: "elasticbeanstalk-eu-central-1-111271551202"
+ bucket_path: "docker-react"
+ on:
+  branch: master
+ access_key_id: $AWS_ACCESS_KEY
+ secret_access_key: $AWS_SECRET_KEY
